# MinimumSnapTrajGenerator

./: CMakeLists.txt  README.md  package.xml
App/: trajGenerator_node.cpp
config/: default.yaml
include/trajGenerator/: trajectory_generator_waypoint.h
src/trajGenerator/: trajectory_generator_waypoint.cpp
traj_data/: trajectory_pos.txt  trajectory_vel.txt
